# teste-ai

./: .env.bak  .env.example  .gitignore  README-SECURITY.md  README.md  mongo_atlas.txt  pyproject.toml  tasks.md
data/documents/: exemplo.md  pix_conciliacao.md
data/uploads/: tmp8mgi3vby_exported.txt
examples/: rag_example.py  test_rag.py
scripts/: clear_db.py
src/: .env.example  config.py  main.py
src/agents/: epic_generator.py  rag_agent.py
src/api/: app.py  main.py  run.py
src/api/core/: config.py  database.py
src/api/middleware/: tracking.py
src/api/models/: epics.py  stories.py
src/api/routers/: documents.py  epics.py  monitoring.py  stories.py
src/api/services/: epics.py  stories.py
src/aspects/: azure_tracking.py
src/config/: __init__.py  azure_config.py  config.py  database.py  settings.py
src/core/: database.py
src/models/: document.py  epic.py  tracking.py
src/rag/: __init__.py  cache_manager.py  document_processor.py  embeddings_manager.py  rag_engine.py
src/services/: background_manager.py  background_tasks.py  document_service.py  document_service_new.py  epic_service.py  process_worker.py  tracking_service.py
src/utils/: azure_client.py  document_loader.py  text_chunker.py  utils.py
tests/: test_rag.py
